# fortitudo.tech

./: CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  README.rst  environment.yml  pyproject.toml  requirements.yml
.github/workflows/: CodeQL.yml  tests.yml
data/: R_monthly.csv  etfs_identifiers.csv  etfs_identifiers.txt  etfs_invalid.csv  etfs_returns_backfill.csv  fred_mapping_treasuries.csv  fred_treasuries_timeseries.csv  meta_monthly_columns.txt  p_monthly.csv  treasuries_identifiers.csv  treasuries_identifiers.txt  treasuries_returns_monthly.csv  v_monthly.csv
docs/source/: conf.py  contributing.rst  data.rst  documentation.rst  entropy_pooling.rst  examples.rst  index.rst  installation.rst  optimization.rst  refs.bib  refs.bib.bak
examples/: 1. MeanCVaR_EntropyPooling.ipynb  1. Overview.ipynb  10_DerivPortOpt_ParamUncertainty.ipynb  11_TimeStateResampling.ipynb  12_NormalDistributionMyth.ipynb  13_HighDimensionalCVaR.ipynb  14_ConditionalMaximumLoss.ipynb  1_MeanCVaR_EntropyPooling.ipynb  2. EntropyPooling.ipynb  2. SequentialEP.ipynb  2_EntropyPooling.ipynb  2_SequentialEntropyPooling.ipynb  3. MeanCVaR_MeanVariance.ipynb  3_MeanCVaR_MeanVariance.ipynb  4_TimeSeries.ipynb  5_DerivativesFramework.ipynb  6_Simulation.ipynb  6_SimulationExpDecay.ipynb  6_SimulationExpDecayProbs.ipynb  7_CausalPredictiveViews.ipynb  7_RiskFactorViews.ipynb  8_CausalPredictive.ipynb  8_CausalPredictiveFramework.ipynb  9_PortOptDeriv_ParamUncertainty.ipynb  9_PortfolioOpt_ParamUncertainty.ipynb  README.rst  article.py  assemble_monthly_R_p_v_and_summary.py  backfill_missing_etfs.py  build_monthly_treasury_tr.py  docs.py  docs_example.py  fetch_etfs_from_pdf.py  fetch_fred_data.py  fetch_treasuries_from_pdf.py  fred_mapping_template.csv  generate_plots_and_report.py  prepare_inputs_example.py  universe_template.csv
fortitudo/: __init__.py
fortitudo/tech/: __init__.py  data.py  entropy_pooling.py  fred_data.py  functions.py  market_data.py  optimization.py  option_pricing.py  prepare.py  risk_model.py  simulation.py  treasury_tr_model.py  universe.py
fortitudo/tech/data/: parameters.csv  pnl.csv  time_series.csv
tests/: context.py  test_data.py  test_entropy_pooling.py  test_functions.py  test_optimization.py  test_option_pricing.py  test_pnl.csv  test_risk_model.py  test_simulation.py
