[tool.poetry]
name = "fortitudo.tech"
version = "0.3.2"
description = "Investment and risk technologies maintained by Fortitudo Technologies."
authors = ["Fortitudo Technologies <software@fortitudo.tech>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://fortitudo.tech"
repository = "https://github.com/fortitudo-tech/fortitudo.tech"
documentation = "https://os.fortitudo.tech"
keywords = ["CVaR", "Efficient Frontier", "Entropy Pooling", "Mathematical Finance", "Portfolio Optimization"]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics"]
packages = [
    { include = "fortitudo/tech" }
]

include = ["fortitudo/tech/data/pnl.csv", "fortitudo/tech/data/parameters.csv"]

[tool.poetry.urls]
"Issues" = "https://github.com/fortitudo-tech/fortitudo.tech/issues"

[tool.poetry.dependencies]
python = "^3.7.1, <3.10"
scipy = "^1.6"
cvxopt = "^1.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.12.0"
sphinxcontrib-bibtex = "^2.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
