[tool.poetry]
name = "fortitudo.tech"
version = "1.1.2"
description = "Entropy Pooling views and stress-testing combined with Conditional Value-at-Risk (CVaR) portfolio optimization in Python."
authors = ["Fortitudo Technologies <software@fortitudo.tech>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://fortitudo.tech"
repository = "https://github.com/fortitudo-tech/fortitudo.tech"
documentation = "https://os.fortitudo.tech"
keywords = ["CVaR", "Efficient Frontier", "Entropy Pooling", "Quantitative Finance", "Portfolio Optimization"]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics"]
packages = [
    { include = "fortitudo/tech" }
]

include = [
    "fortitudo/tech/data/pnl.csv", "fortitudo/tech/data/parameters.csv",
    "fortitudo/tech/data/risk_factors.csv", "fortitudo/tech/data/time_series.csv"]

[tool.poetry.urls]
"Issues" = "https://github.com/fortitudo-tech/fortitudo.tech/issues"

[tool.poetry.dependencies]
python = "^3.9, <3.13"
scipy = "^1.10"
cvxopt = "^1.3.0"
pandas = ">=1.3.4"
numpy = "^1.22"
matplotlib = "^3.4"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.12.0"
sphinxcontrib-bibtex = "^2.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
